# csalt

./: .readthedocs.yaml  MatrixTODO.txt  README.rst  TODO.txt  old_matrix.c
csalt/: CMakeLists.txt  admin.c  array.c  avl.c  c_allocator.c  c_arena.c  c_array.c  c_dict.c  c_double.c  c_dtypes.c  c_error.c  c_float.c  c_int.c  c_int16.c  c_int32.c  c_int64.c  c_int8.c  c_ldouble.c  c_list.c  c_matrix.c  c_string.c  c_tensor.c  c_tree.c  c_uint16.c  c_uint32.c  c_uint64.c  c_uint8.c  dlist.c  error_codes.c  hash.c  heap.c  print.c  slist.c  str.c  swap.c  temp.c  vector.c
csalt/include/: admin.h  array.h  avl.h  c_allocator.h  c_arena.h  c_array.h  c_dict.h  c_double.h  c_dtypes.h  c_error.h  c_float.h  c_int.h  c_int16.h  c_int32.h  c_int64.h  c_int8.h  c_ldouble.h  c_list.h  c_matrix.h  c_string.h  c_tensor.h  c_tree.h  c_uint16.h  c_uint32.h  c_uint64.h  c_uint8.h  dlist.h  error_codes.h  hash.h  heap.h  print.h  slist.h  str.h  swap.h  temp.h  vector.h
csalt/simd/: errata  simd_avx2_char.inl  simd_avx2_double.inl  simd_avx2_float.inl  simd_avx2_float.sync-conflict-20250905-211832-F4Z4OWV.inl  simd_avx2_int16.inl  simd_avx2_int32.inl  simd_avx2_int64.inl  simd_avx2_int8.inl  simd_avx2_uint16.inl  simd_avx2_uint32.inl  simd_avx2_uint64.inl  simd_avx2_uint8.inl  simd_avx512_char.inl  simd_avx512_double.inl  simd_avx512_float.inl  simd_avx512_int16.inl  simd_avx512_int32.inl  simd_avx512_int64.inl  simd_avx512_int8.inl  simd_avx512_uint16.inl  simd_avx512_uint32.inl  simd_avx512_uint64.inl  simd_avx512_uint8.inl  simd_avx_char.inl  simd_avx_double.inl  simd_avx_float.inl  simd_avx_int16.inl  simd_avx_int32.inl  simd_avx_int64.inl  simd_avx_int8.inl  simd_avx_uint16.inl  simd_avx_uint32.inl  simd_avx_uint64.inl  simd_avx_uint8.inl  simd_neon_char.inl  simd_neon_double.inl  simd_neon_float.inl  simd_neon_int16.inl  simd_neon_int32.inl  (+73 more)
csalt/test/: CMakeLists.txt  hello.h  test_allocator.c  test_allocator.h  test_arena.c  test_arena.h  test_array.c  test_array.h  test_avl.c  test_avl.h  test_dict.c  test_dllist.c  test_dllist.h  test_double.c  test_double.h  test_dtypes.c  test_error.c  test_error.h  test_float.c  test_float.h  test_hash.c  test_hash.h  test_heap.c  test_heap.h  test_int.c  test_int.h  test_ldouble.c  test_ldouble.h  test_list.c  test_matrix.c  test_sllist.c  test_sllist.h  test_string.c  test_string.h  test_suite.h  test_swap.c  test_swap.h  test_tensor.c  test_uint8_array.c  test_vector.c  (+2 more)
csalt/test/temp/: test_allocator.c  test_allocator.h  test_double.c  test_double.h  test_int.c  test_ldouble.c  test_ldouble.h  test_string.c  test_string.h
docs/doxygen/: Doxyfile  find.txt  requirements.txt
docs/doxygen/sphinx_docs/: AVL.rst  Allocator.rst  Array.rst  DList.rst  Dict.rst  Double.rst  Error.rst  Float.rst  Hash.rst  Int.rst  Int16.rst  Int32.rst  Int64.rst  Int8.rst  LDouble.rst  List.rst  Matrix.rst  MaxHeap.rst  MinHeap.rst  Print.rst  SList.rst  Strings.rst  Swap.rst  Tensor.rst  Todo.rst  Tree.rst  Types.rst  Uint16.rst  Uint32.rst  Uint64.rst  Uint8.rst  Vector.rst  btree_three.dot  btree_two.dot  conf.py  index.rst
scripts/Windows/: debug.bat  install.bat  static.bat
scripts/bash/: debug.sh  install.sh  static.sh
scripts/zsh/: build.zsh  compile.zsh  debug.zsh  install.zsh  static.zsh
simd/: simd_avx2_char.inl  simd_avx2_float.inl  simd_avx2_int32.inl  simd_avx2_int64.inl  simd_avx2_uint32.inl  simd_avx2_uint8.inl  simd_avx512_char.inl  simd_avx512_double.inl  simd_avx512_float.inl  simd_avx512_int64.inl  simd_avx512_uint16.inl  simd_avx512_uint32.inl  simd_avx512_uint64.inl  simd_avx512_uint8.inl  simd_avx_float.inl  simd_avx_int16.inl  simd_avx_uint8.inl  simd_neon_char.inl  simd_neon_float.inl  simd_neon_int16.inl  simd_neon_int8.inl  simd_neon_uint32.inl  simd_neon_uint64.inl  simd_neon_uint8.inl  simd_scalar_char.inl  simd_scalar_double.inl  simd_scalar_float.inl  simd_scalar_int32.inl  simd_scalar_int64.inl  simd_scalar_int8.inl  simd_scalar_uint16.inl  simd_scalar_uint64.inl  simd_scalar_uint8.inl  simd_sse2_float.inl  simd_sse2_int64.inl  simd_sse2_uint64.inl  simd_sse2_uint8.inl  simd_sse3_char.inl  simd_sse3_float.inl  simd_sse3_int16.inl  (+15 more)
temp/: Array.rst  Double.rst  Float.rst  Heap.rst  Int16.rst  Int32.rst  Int64.rst  LDouble.rst  Matrix.rst  Strings.rst  Uint8.rst  c_array.c  c_int32.h  c_string.c  c_string.h  c_uint8.h
